Added Class search filter and help answers for all controls

--- a/TaxiFinder/TaxiFinder.csproj
+++ b/TaxiFinder/TaxiFinder.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FilesParser.cs" />
+    <Compile Include="SearchEngines.cs" />
     <Compile Include="Taxi.cs" />
     <Compile Include="TaxiFinder.cs">
       <SubType>Form</SubType>
