--- a/TaxiFinder/TaxiFinder.csproj
+++ b/TaxiFinder/TaxiFinder.csproj
@@ -61,6 +61,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaxiPrinter.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -88,10 +89,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DataXML\BenzTaxi.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="DataXML\Uklon.xml" />
     <Content Include="iconfinder_aiga_taxi_bg_134187.ico" />
   </ItemGroup>
   <ItemGroup />
