--- a/TaxiFinder/TaxiFinder.csproj
+++ b/TaxiFinder/TaxiFinder.csproj
@@ -52,6 +52,7 @@
     <Compile Include="FilesParser.cs" />
     <Compile Include="Searcher.cs" />
     <Compile Include="SearchEngines.cs" />
+    <Compile Include="StrComparer.cs" />
     <Compile Include="Taxi.cs" />
     <Compile Include="TaxiFinderForm.cs">
       <SubType>Form</SubType>
@@ -62,6 +63,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultsPrinter.cs" />
+    <Compile Include="ToHTMLConverter.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -90,6 +92,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="iconfinder_aiga_taxi_bg_134187.ico" />
+    <Content Include="HTMLConvertTemplate.xslt">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
