--- a/TaxiFinder/TaxiFinder.csproj
+++ b/TaxiFinder/TaxiFinder.csproj
@@ -73,6 +73,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TaxiFinderForm.en.resx">
+      <DependentUpon>TaxiFinderForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TaxiFinderForm.resx">
       <DependentUpon>TaxiFinderForm.cs</DependentUpon>
     </EmbeddedResource>
